--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -7,11 +7,17 @@
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
   <div class="subtitle">
-    <span>{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</span>
-    {%- if site.extCount %}
-      <span>浏览量</span>
-      <span id="busuanzi_value_page_pv"></span>
-    {% endif %}
+    <span>✨{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</span>
+
+    <div class="float-right">
+      {%- if site.extCount %}
+        <span>🥰本站访客数</span>
+        <span id="busuanzi_value_site_uv"></span>
+        <span>👀本文阅读量</span>
+        <span id="busuanzi_value_page_pv"></span>
+      {% endif %}
+    </div>
+
   </div>
   {% endif %}
   <div class="post">
