--- a/static/css/post.css
+++ b/static/css/post.css
@@ -12,6 +12,9 @@
   font-size: 12px;
   color: #999999;
 }
+.float-right {
+  float: right !important;
+}
 .page-post .post > * {
   margin: 18px 0;
 }
