--- a/_includes/script.html
+++ b/_includes/script.html
@@ -10,6 +10,7 @@
   window.blog.initClickEffect(textArr)
 })()
 </script>
+<script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 {% endif %}
 
 {%- if page.layout=="mypost" -%}
