--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="footer">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
-
-
+  <span>不走心的努力，都是在敷衍自己。</span>
   {%- if site.extCount %}
     <span>总访问量</span>
     <span id="busuanzi_value_site_pv"></span>
