--- a/_includes/script.html
+++ b/_includes/script.html
@@ -9,7 +9,9 @@
   var textArr = ['富强', '民主', '文明', '和谐', '自由', '平等', '公正', '法治', '爱国', '敬业', '诚信', '友善']
   window.blog.initClickEffect(textArr)
 })()
-
+</script>
+<script type="text/javascript"
+color="220,220,220" opacity='0.7' zIndex="-2" count="150" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js">
 </script>
 
 
