--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
   <span>不走心的努力，都是在敷衍自己。</span>
-  {%- if site.extCount %}
+  <!-- {%- if site.extCount %}
     <span>总访问量</span>
     <span id="busuanzi_value_site_pv"></span>
-  {% endif %}
+  {% endif %} -->
   <div class="footer-btn theme-toggler hide">
     <i class="svg-icon icon-theme-light"></i>
   </div>
