--- a/_includes/script.html
+++ b/_includes/script.html
@@ -10,9 +10,9 @@
   window.blog.initClickEffect(textArr)
 })()
 </script>
-<script type="text/javascript"
+<!-- <script type="text/javascript"
 color="220,220,220" opacity='0.7' zIndex="-2" count="150" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js">
-</script>
+</script> -->
 
 
 {% endif %}
