--- a/_includes/script.html
+++ b/_includes/script.html
@@ -17,7 +17,7 @@ color="220,220,220" opacity='0.7' zIndex="-2" count="150" src="//cdn.bootcss.com
 
 {% endif %}
 
-{%- if page.layout=="mypost" -%}
+<!-- {%- if page.layout=="mypost" -%}
   {%- if site.extMath -%}
     {% include ext-mathjax.html %}
   {% elsif page.extMath %}
@@ -27,4 +27,4 @@ color="220,220,220" opacity='0.7' zIndex="-2" count="150" src="//cdn.bootcss.com
 
 {%- if site.extCount %}
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-{% endif %}
+{% endif %} -->
