--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
     window.blog = {
       baseurl: '{{site.baseurl}}',
       buildAt: '{{buildAt}}',
-      darkMode: false,
+      darkMode: true,
       initDarkMode: function (flag) {
         if (flag && flag === 'true') this.darkMode = true
         else if (flag && flag === 'false') this.darkMode = false
