--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
         else if (flag && flag === 'false') this.darkMode = false
         else this.darkMode = window.matchMedia('(prefers-color-scheme: dark)').matches
         
-        this.darkMode = true
+        this.darkMode = true //强行暗黑色
         document.documentElement.className = this.darkMode ? 'dark' : ''
         document.querySelector('meta[name=theme-color]').setAttribute('content', this.darkMode ? '#2D2E32' : '#FFFFFF')
       }
